--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="app"></div>
 
-    <script src="src/recipe-66-2.js"></script>
+    <script src="src/recipe-69.js"></script>
   </body>
 </html>
